--- a/views/addContact.html
+++ b/views/addContact.html
@@ -27,3 +27,8 @@
      <br>
      country : <input type="text" name="country">
 </form>
+
+<B>
+<a href="/">Confirm</a>
+<a href="/" class="cancel">Cancel</a>
+</B>
