--- a/views/contact.html
+++ b/views/contact.html
@@ -1,10 +1,21 @@
-<a href="/" class="back">Back</a>
-
 {{#notification}}
 <!-- Something happened: -->
 <p class="message {{severity}}">{{message}}</p>
 {{/notification}}
 
+{{#contacts}}
+
 <uL>
-    <H1>{{lastName}}, {{firstName}} {{initial}} ({{nickname}}</H1>
+    <h1>{{lastName}}, {{firstName}} {{initials}} ({{nickname}})</h1>
+    <div>{{address.addressLine1}}</div>
+    <div>{{address.addressLine2}}</div>
+    <div>{{address.city}}, {{address.state}} {{address.zipCode}}</div>
+    <div>{{email}}</div>
+    <div>{{phoneNumber}}</div>
 </uL>
+
+{{/contacts}}
+
+<a class="btn" href="/contacts/{{contacts.id}}/edit">Edit</a>
+
+<a class="btn" href="/contacts/{{contacts.id}}/delete">delete</a>
