--- a/views/layout.html
+++ b/views/layout.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    {{{ body }}}
+    <a href="/" class="home">home</a>
+    {{{body}}}
 </body>
 </html>
