--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,8 @@
-<a href="/contacts/add" class="add">New Contact</a>
-
 {{#notification}}
 <p class="message {{severity}}">{{message}}</p>
 {{/notification}}
+
+<H3><a href="/contacts/add" class="add">New Contact</a></H3>
 
 {{#contacts}}
 
