--- a/views/contact.html
+++ b/views/contact.html
@@ -6,10 +6,12 @@
 {{#contacts}}
 
 <uL>
-    <h1>{{lastName}}, {{firstName}} {{initials}} ({{nickname}})</h1>
+    <h1>{{lastName}}, {{firstName}} {{initials}} {{#if nickname}} ({{nickname}}) {{/if}}</h1>
+    {{#if address.state}}
     <div>{{address.addressLine1}}</div>
     <div>{{address.addressLine2}}</div>
-    <div>{{address.city}}, {{address.state}} {{address.zipCode}}</div>
+    <div>{{#if address.city}} {{address.city}}, {{/if}} {{address.state}} {{address.zipCode}}</div>
+    {{/if}}
     <div>{{email}}</div>
     <div>{{phoneNumber}}</div>
 </uL>
@@ -20,7 +22,7 @@
 
 {{#if contacts.id}}
     <button type="submit"
-        class="btn btn-red right"
+        class="btn btn-red"
         name="action"
         value="delete"
         formaction="/contacts/{{contacts.id}}/delete"
