--- a/views/layout.html
+++ b/views/layout.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <a href="/" class="home">home</a>
+    <ul class="nav">
+        <li><a href="/" class="home">home</a></li>
+    </ul>
     {{{body}}}
 </body>
 </html>
