--- a/views/layout.html
+++ b/views/layout.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
+<center>
     <ul class="nav">
-        <li><a href="/" class="home">home</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/contacts/search">Advanced Search</a></li>
     </ul>
+</center>
     {{{body}}}
 </body>
 </html>
