--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,5 +1,4 @@
 body {
-    max-width: 720px;
     margin: auto;
     font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
@@ -9,13 +8,8 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    
-}
-
 .btn {
     cursor: pointer;
-    font: bold 11px Arial;
     text-decoration: none;
     background-color: #EEEEEE;
     color: #333333;
@@ -24,6 +18,7 @@ a:hover {
     border-right: 1px solid #333333;
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;
+    height: 23px;
 }
 
 .btn-green {
@@ -31,22 +26,41 @@ a:hover {
 }
 
 .nav {
-    color: white;
-    width: 720px;
-    height: 18px;
-    font-size: 16px;
-    font-weight: bold;
-    background-color: blue;
-    border-radius: 8px;   
+    margin: 0 auto;
+    background: white;
+    padding: 8px;
+    border-bottom: 1px solid black;
 }
 
-.home {
-    color:white;
+.nav > li {
+    display: inline-block;
+    zoom: 1;
+    *display:inline;
+}
+
+.nav > li > a {
+    color: #666666;
+    text-decoration: none;
+    padding: 3px 8px;
+}
+
+.nav > li > a:hover {
+    color: black;
+    text-decoration: underline;
+}
+
+.nav-bar {
+    top: 54px;
+    left: 20px;
+    height: 100%;
+    width: 200px;
+    position: absolute;
+    border-right: 1px solid #333333;
+    
 }
 
 .btnAdd {
     cursor: pointer;
-    font: bold 25px Arial;
     text-decoration: none;
     background-color: #EEEEEE;
     color: #333333;
@@ -55,8 +69,19 @@ a:hover {
     border-right: 1px solid #333333;
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;
+    margin-left: 240px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .contact {
-    border-bottom: 1px solid #333333;
+    text-decoration: underline;
+    margin-left: 240px;
+    max-width: 600px;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.hide {
+    visibility: hidden;
 }
