--- a/views/addContact.html
+++ b/views/addContact.html
@@ -1,3 +1,4 @@
+<center>
 {{#notification}}
 <!-- Something happened: -->
 <p class="message {{severity}}">{{message}}</p>
@@ -5,34 +6,59 @@
 
 
 <form action="" method="post">
-    <H1>Add Contact</H1>
-    <br>
-    First Name : <input type="text" name="firstName">
-    <br>
-    Last Name : <input type="text" name="lastName">
-    <br>
-    Initial : <input type="text" name="initial">
-    <br>
-    Nickname : <input type="text" name="nickname">
-    <br>
-    Email : <input type="text" name="email">
-    <br>
-    Phone Number : <input type="text" name="phoneNumber">
-    <br>
-    address :
-    <br>
-     address line 1 : <input type="text" name="addressl1">
-     <br>
-     address line 2 : <input type="text" name="addressl2">
-     <br>
-     city : <input type="text" name="city">
-     <br>
-     state : <input type="text" name="state">
-     <br>
-     zip : <input type="text" name="zipCode">
-     <br>
-     country : <input type="text" name="country">
-     
+<center><h1><u>Add Contact</u></h1></center>
+<table>
+    <tr>
+    <td>First Name :</td> <td><input type="text" name="firstName"></td>
+    </tr>
+    <tr>
+    <td>Last Name :</td> <td><input type="text" name="lastName"></td>
+    </tr>
+    <tr>
+    <td>Initial :</td> <td><input type="text" name="initial"></td>
+    </tr>
+    <tr>
+    <td>Nickname :</td> <td><input type="text" name="nickname"></td>
+    </tr>
+    <tr>
+    <td>Email :</td> <td><input type="text" name="email"></td>
+    </tr>
+    <tr>
+    <td>Phone Number :</td> <td><input type="text" name="phoneNumber"></td>
+    </tr>
+    <tr>
+        <td>Group :</td>
+        <td>
+            <select name="group">
+                {{#groups}}
+                <option value="{{name}}">{{name}}</option>
+                {{/groups}}
+            </select>    
+        </td>
+    </tr>
+    <tr>
+    <td colspan="2"><center><u>Address</u></center></td>
+    </tr>
+    <tr>
+    <td>address line 1 :</td> <td><input type="text" name="addressl1"></td>
+    </tr>
+    <tr>
+    <td>address line 2 :</td> <td><input type="text" name="addressl2"></td>
+    </tr>
+    <tr>
+    <td>city :</td> <td><input type="text" name="city"></td>
+    </tr>
+    <tr>
+    <td>state :</td> <td><input type="text" name="state"></td>
+    </tr>
+    <tr>
+    <td>zip :</td> <td><input type="text" name="zipCode"></td>
+    </tr>
+    <tr>
+    <td>country :</td> <td><input type="text" name="country"></td>
+    </tr>
+</table>
+
 <br>
 
 <B>
@@ -40,3 +66,4 @@
         <a class="btn" href="/">Cancel</a>
 </B>
 </form>
+</center>
